--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,91 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.home h1{
+  font-size: 30px;
+}
+.home input{
+  padding: 5px 10px;
+  width: 300px;
+  height: 25px;
+  border: 1px solid skyblue;
+}
+.home button{
+  background-color: white;
+  height: 37px;
+  padding: 5px 10px;
+  border: 1px solid skyblue;
+}
+.home button.submit{
+  color: green;
+}
+.home button.cancel{
+  color:red;
+}
+.home button.submit:hover{
+  cursor: pointer;
+  color: white;
+  background-color: green;
+  border: green;
+}
+.home button.cancel:hover{
+  cursor: pointer;
+  color: white;
+  background-color: red;
+  border: red;
+}
+.home .data{
+  margin: 15px;
+}
+.data-display{
+  margin-top: 30px;
+}
+.row-preview{
+  align-items: center;
+  max-width: 600px;
+  margin: 0px 10px;
+  height: 50px;
+  padding: 5px 15px;
+  border: 1px solid silver;
+}
+.row-preview span.name{
+  font-size: large;
+  float: left;
+  
+}
+.row-preview span.icons{
+  cursor: pointer;
+  padding: 0px 5px;
+  float: right;
+  color: brown;
+}
+.edit input{
+  padding: 5px 10px;
+  width: 300px;
+  height: 25px;
+  border: 1px solid skyblue;
+}
+.edit button{
+  background-color: white;
+  height: 37px;
+  padding: 5px 10px;
+  border: 1px solid skyblue;
+}
+.edit button.submit{
+  color: green;
+}
+.edit button.cancel{
+  color:red;
+}
+.edit button.submit:hover{
+  cursor: pointer;
+  color: white;
+  background-color: green;
+  border: green;
+}
+.edit button.cancel:hover{
+  cursor: pointer;
+  color: white;
+  background-color: red;
+  border: red;
+}
